[project]
name = "flow-veo-client"
version = "1.0.0"
description = "Reverse-engineered Flow video generation client using Veo 3"
requires-python = ">=3.10"
dependencies = []
authors = [
    {name = "krishamaze"},
]
license = {text = "MIT"}

[project.scripts]
flow-veo = "flow_veo_client:main"

[project.optional-dependencies]
dev = [
    "mitmproxy",
    "ruff",
]
